--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "paper-shadow": "Polymer/paper-shadow#master",
     "paper-ripple": "Polymer/paper-ripple#master",
-    "polymer": "Polymer/polymer#0.5",
-    "paper-card": "~0.1.5"
+    "polymer": "Polymer/polymer#0.5"
   }
 }
