--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,11 @@
   "dependencies": {
     "paper-shadow": "Polymer/paper-shadow#master",
     "paper-ripple": "Polymer/paper-ripple#master",
-    "polymer": "Polymer/polymer#0.5"
+    "polymer": "~0.5.0"
+  },
+  "resolutions": {
+    "core-component-page": "^0.5",
+    "polymer": "^0.5",
+    "webcomponentsjs": "^0.6.0"
   }
 }
